--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "@fehujs/starter-template",
+  "name": "myapp",
   "version": "0.1.0",
-  "description": "A simple starter template for a Fehujs app",
+  "private": true,
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fehujs/starter-template.git"
-  },
-  "keywords": [
-    "starter",
-    "template"
-  ],
-  "author": "Pascal LLEONART",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fehujs/starter-template/issues"
-  },
-  "homepage": "https://github.com/fehujs/starter-template#readme",
   "devDependencies": {
     "@fehujs/tsconfig": "^1.0.0",
     "@types/formidable": "^3.4.5",
